# limitbri

./: .gitignore  README.md  pyproject.toml
limitbri/: __init__.py  decorators.py  exceptions.py
tests/: test_limitbri.py  test_limitbri_exception.py
